# fraiseql_doctor

./: .claude_project_instructions.md  .env.example  .gitignore  .pre-commit-config.yaml  AGENT_HANDOFF_GUIDE.md  CLAUDE_COMMANDS.md  CURRENT_3HOUR_WORK_PLAN.md  CURRENT_MICRO_TDD_PLAN.md  LESSONS_LEARNED_TESTING_SUCCESS.md  Makefile  PHASE1_COMPLETION_REPORT.md  PHASE1_SECURITY.md  PHASE2.5_BUNDLE_COMPARISON.md  PHASE2.5_CYCLE2_ENDPOINT_MANAGEMENT_TDD.md  PHASE2.5_CYCLE3_APOLLO_STUDIO_TDD.md  PHASE2.5_CYCLE3_DAY6_TDD_MICROCYCLES.md  PHASE2.5_DASHBOARD_PRD.md  PHASE2.5_IMPLEMENTATION_TDD.md  PHASE2_CLI.md  PHASE3_DOCUMENTATION.md  PHASE4_REVERSE_TESTING_REPORT.md  README.md  RELEASE_PLAN.md  ROADMAP.md  alembic.ini  docker-compose.test.yml  pyproject.toml  test_connectivity.js  test_phase4_final.py  test_phase4_simple.py  test_phase4_standalone.py  validate_reverse_tests.py
alembic/: env.py
backend/: Makefile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1cbd4bbc07cb_initial_database_schema.py  91c6ba9010d9_add_performance_indexes.py
backend/src/fraiseql_doctor/cli/: __init__.py  main.py
backend/src/fraiseql_doctor/cli/commands/: batch.py  config.py  endpoint.py  health.py  query.py
backend/src/fraiseql_doctor/cli/utils/: file_handlers.py  formatters.py
backend/src/fraiseql_doctor/core/: database.py  execution_manager.py  fraiseql_client.py  query_collection.py  result_storage.py
backend/src/fraiseql_doctor/core/database/: __init__.py  models.py  schemas.py
backend/src/fraiseql_doctor/models/: __init__.py  base.py  endpoint.py  execution.py  health_check.py  query.py  query_collection.py  result.py  schedule.py
backend/src/fraiseql_doctor/schemas/: endpoint.py  query.py
backend/src/fraiseql_doctor/services/: __init__.py  complexity.py  fraiseql_client.py  retry.py
backend/src/fraiseql_doctor/utils/: __init__.py  logging.py
backend/src/fraiseql_doctor/web/: __init__.py  main.py
backend/src/fraiseql_doctor/web/api/v1/: endpoints.py  executions.py  executions_simple.py  queries.py  router.py  websocket.py
backend/src/fraiseql_doctor/web/api/v1/schemas/: __init__.py  executions.py
backend/src/fraiseql_doctor/web/core/: __init__.py  database.py  websocket_manager.py
backend/src/fraiseql_doctor/web/schemas/: __init__.py  execution.py
backend/tests/: conftest.py  test_cli_basic.py  test_complexity_analyzer.py  test_data_integrity.py  test_data_validation.py  test_database_connection.py  test_database_performance.py  test_fraiseql_client.py  test_migrations.py  test_models_structure.py  test_retry_logic.py
backend/tests/cli/: test_cli_commands.py
backend/tests/fixtures/: database.py  real_fixtures.py  real_services.py
backend/tests/integration/: test_phase4_comprehensive_validation.py  test_phase4_edge_cases.py  test_phase4_failure_patterns.py  test_phase4_reverse_scenarios.py  test_query_management.py  test_query_management_simple.py
backend/tests/security/: __init__.py  test_secure_operations.py
docs/: PRD_GraphQL_API_Configuration_Admin_UI.md
frontend/: .env.development  .env.production  .eslintrc.cjs  .gitignore  env.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  test_results.txt  tsconfig.app.json  vite.config.ts  vitest.config.ts
prompts/: 01_project_foundation.md  01_project_foundation_tdd.md  02_database_schema.md  02_database_schema_tdd.md  03_fraiseql_client.md  (+10 more)
(+171 files in other folders)
